--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="snnu.cs.clock">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,9 +14,48 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".FullScannerActivity"
+            android:theme="@style/AppOverlayTheme"
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:label="@string/scanner_activity">
+            <meta-data android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow" />
+        </activity>
+
+        <activity android:name=".FullScannerFragmentActivity"
+            android:theme="@style/AppOverlayTheme"
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:label="@string/scanner_fragment_activity">
+            <meta-data android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow" />
+        </activity>
+
+        <activity android:name=".SimpleScannerActivity"
+            android:theme="@style/AppOverlayTheme"
+            android:label="@string/simple_scanner_activity">
+        </activity>
+
+        <activity android:name=".SimpleScannerFragmentActivity"
+            android:theme="@style/AppOverlayTheme"
+            android:label="@string/simple_scanner_fragment_activity">
+        </activity>
+
+        <activity android:name=".FullScreenScannerFragmentActivity"
+            android:theme="@style/AppOverlayTheme"
+            android:label="@string/full_screen_scanner_fragment_activity">
+        </activity>
+
+        <activity android:name=".CustomViewFinderScannerActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/custom_view_finder_scanner_activity">
+        </activity>
+
+        <activity android:name=".ScalingScannerActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/scaling_scanner_activity">
         </activity>
     </application>
 
