增加交互事件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="snnu.cs.clock">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,52 +12,53 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Clockin">
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FullScannerActivity"
+        <activity
+            android:name=".FullScannerActivity"
+            android:label="@string/scanner_activity"
             android:theme="@style/AppOverlayTheme"
-            android:uiOptions="splitActionBarWhenNarrow"
-            android:label="@string/scanner_activity">
-            <meta-data android:name="android.support.UI_OPTIONS"
+            android:uiOptions="splitActionBarWhenNarrow">
+            <meta-data
+                android:name="android.support.UI_OPTIONS"
                 android:value="splitActionBarWhenNarrow" />
         </activity>
-
-        <activity android:name=".FullScannerFragmentActivity"
+        <activity
+            android:name=".FullScannerFragmentActivity"
+            android:label="@string/scanner_fragment_activity"
             android:theme="@style/AppOverlayTheme"
-            android:uiOptions="splitActionBarWhenNarrow"
-            android:label="@string/scanner_fragment_activity">
-            <meta-data android:name="android.support.UI_OPTIONS"
+            android:uiOptions="splitActionBarWhenNarrow">
+            <meta-data
+                android:name="android.support.UI_OPTIONS"
                 android:value="splitActionBarWhenNarrow" />
         </activity>
-
-        <activity android:name=".SimpleScannerActivity"
-            android:theme="@style/AppOverlayTheme"
-            android:label="@string/simple_scanner_activity">
-        </activity>
-
-        <activity android:name=".SimpleScannerFragmentActivity"
-            android:theme="@style/AppOverlayTheme"
-            android:label="@string/simple_scanner_fragment_activity">
-        </activity>
-
-        <activity android:name=".FullScreenScannerFragmentActivity"
-            android:theme="@style/AppOverlayTheme"
-            android:label="@string/full_screen_scanner_fragment_activity">
-        </activity>
-
-        <activity android:name=".CustomViewFinderScannerActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/custom_view_finder_scanner_activity">
-        </activity>
-
-        <activity android:name=".ScalingScannerActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/scaling_scanner_activity">
-        </activity>
+        <activity
+            android:name=".SimpleScannerActivity"
+            android:label="@string/simple_scanner_activity"
+            android:theme="@style/AppOverlayTheme" />
+        <activity
+            android:name=".SimpleScannerFragmentActivity"
+            android:label="@string/simple_scanner_fragment_activity"
+            android:theme="@style/AppOverlayTheme" />
+        <activity
+            android:name=".FullScreenScannerFragmentActivity"
+            android:label="@string/full_screen_scanner_fragment_activity"
+            android:theme="@style/AppOverlayTheme" />
+        <activity
+            android:name=".CustomViewFinderScannerActivity"
+            android:label="@string/custom_view_finder_scanner_activity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ScalingScannerActivity"
+            android:label="@string/scaling_scanner_activity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
